v2.24.1/_sources/plugins/networks_firmware_upgrades_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.meraki.networks_firmware_upgrades module -- Resource module for networks \_firmware \_upgrades
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.meraki collection <https://galaxy.ansible.com/cisco/meraki>`_ (version 2.24.1).

    To install it, use: :code:`ansible-galaxy collection install cisco.meraki`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.meraki.networks_firmware_upgrades_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.meraki.networks_firmware_upgrades`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.meraki 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation update of the resource networks \_firmware \_upgrades.
- Update firmware upgrade information for a network.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- meraki \>= 2.4.9
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_action_batch_retry_wait_time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_action_batch_retry_wait_time:

      .. rst-class:: ansible-option-title

      **meraki_action_batch_retry_wait_time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_action_batch_retry_wait_time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_action\_batch\_retry\_wait\_time (integer), action batch concurrency error retry wait time


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`60`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_api_key"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_api_key:

      .. rst-class:: ansible-option-title

      **meraki_api_key**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_api_key" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_api\_key (string), API key generated in dashboard; can also be set as an environment variable MERAKI\_DASHBOARD\_API\_KEY


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_base_url"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_base_url:

      .. rst-class:: ansible-option-title

      **meraki_base_url**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_base_url" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_base\_url (string), preceding all endpoint resources


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"https://api.meraki.com/api/v1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_be_geo_id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_be_geo_id:

      .. rst-class:: ansible-option-title

      **meraki_be_geo_id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_be_geo_id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_be\_geo\_id (string), optional partner identifier for API usage tracking; can also be set as an environment variable BE\_GEO\_ID


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`""`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_certificate_path"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_certificate_path:

      .. rst-class:: ansible-option-title

      **meraki_certificate_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_certificate_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_certificate\_path (string), path for TLS/SSL certificate verification if behind local proxy


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`""`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_inherit_logging_config"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_inherit_logging_config:

      .. rst-class:: ansible-option-title

      **meraki_inherit_logging_config**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_inherit_logging_config" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_inherit\_logging\_config (boolean), Inherits your own logger instance


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_log_file_prefix"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_log_file_prefix:

      .. rst-class:: ansible-option-title

      **meraki_log_file_prefix**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_log_file_prefix" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_log\_file\_prefix (string), log file name appended with date and timestamp


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"meraki\_api\_"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_log_path"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_log_path:

      .. rst-class:: ansible-option-title

      **meraki_log_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_log_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      log\_path (string), path to output log; by default, working directory of script if not specified


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`""`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_maximum_retries"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_maximum_retries:

      .. rst-class:: ansible-option-title

      **meraki_maximum_retries**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_maximum_retries" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_maximum\_retries (integer), retry up to this many times when encountering 429s or other server-side errors


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`2`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_nginx_429_retry_wait_time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_nginx_429_retry_wait_time:

      .. rst-class:: ansible-option-title

      **meraki_nginx_429_retry_wait_time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_nginx_429_retry_wait_time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_nginx\_429\_retry\_wait\_time (integer), Nginx 429 retry wait time


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`60`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_output_log"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_output_log:

      .. rst-class:: ansible-option-title

      **meraki_output_log**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_output_log" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_output\_log (boolean), create an output log file?


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_print_console"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_print_console:

      .. rst-class:: ansible-option-title

      **meraki_print_console**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_print_console" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_print\_console (boolean), print logging output to console?


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_requests_proxy"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_requests_proxy:

      .. rst-class:: ansible-option-title

      **meraki_requests_proxy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_requests_proxy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_requests\_proxy (string), proxy server and port, if needed, for HTTPS


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`""`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_retry_4xx_error"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_retry_4xx_error:

      .. rst-class:: ansible-option-title

      **meraki_retry_4xx_error**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_retry_4xx_error" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_retry\_4xx\_error (boolean), retry if encountering other 4XX error (besides 429)?


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_retry_4xx_error_wait_time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_retry_4xx_error_wait_time:

      .. rst-class:: ansible-option-title

      **meraki_retry_4xx_error_wait_time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_retry_4xx_error_wait_time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_retry\_4xx\_error\_wait\_time (integer), other 4XX error retry wait time


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`60`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_simulate"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_simulate:

      .. rst-class:: ansible-option-title

      **meraki_simulate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_simulate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_simulate (boolean), simulate POST/PUT/DELETE calls to prevent changes?


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_single_request_timeout"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_single_request_timeout:

      .. rst-class:: ansible-option-title

      **meraki_single_request_timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_single_request_timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_single\_request\_timeout (integer), maximum number of seconds for each API call


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`60`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_suppress_logging"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_suppress_logging:

      .. rst-class:: ansible-option-title

      **meraki_suppress_logging**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_suppress_logging" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_suppress\_logging (boolean), disable all logging? you're on your own then!


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_use_iterator_for_get_pages"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_use_iterator_for_get_pages:

      .. rst-class:: ansible-option-title

      **meraki_use_iterator_for_get_pages**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_use_iterator_for_get_pages" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_use\_iterator\_for\_get\_pages (boolean), list\* methods will return an iterator with each object instead of a complete list with all items


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-meraki_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-meraki_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **meraki_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-meraki_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      meraki\_wait\_on\_rate\_limit (boolean), retry if 429 rate limit error encountered?


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-networkId"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-networkid:

      .. rst-class:: ansible-option-title

      **networkId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-networkId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      NetworkId path parameter. Network ID.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products:

      .. rst-class:: ansible-option-title

      **products**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Contains information about the network to update.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/appliance"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/appliance:

      .. rst-class:: ansible-option-title

      **appliance**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/appliance" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/appliance/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/appliance/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/appliance/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/appliance/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/appliance/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/appliance/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/appliance/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/appliance/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/appliance/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/appliance/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/appliance/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/appliance/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/appliance/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/appliance/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/appliance/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/camera"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/camera:

      .. rst-class:: ansible-option-title

      **camera**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/camera" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/camera/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/camera/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/camera/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/camera/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/camera/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/camera/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/camera/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/camera/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/camera/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/camera/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/camera/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/camera/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/camera/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/camera/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/camera/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/cellularGateway"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/cellulargateway:

      .. rst-class:: ansible-option-title

      **cellularGateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/cellularGateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/cellularGateway/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/cellulargateway/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/cellularGateway/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/cellularGateway/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/cellulargateway/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/cellularGateway/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/cellularGateway/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/cellulargateway/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/cellularGateway/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/cellularGateway/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/cellulargateway/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/cellularGateway/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/cellularGateway/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/cellulargateway/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/cellularGateway/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/secureConnect"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/secureconnect:

      .. rst-class:: ansible-option-title

      **secureConnect**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/secureConnect" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/secureConnect/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/secureconnect/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/secureConnect/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/secureConnect/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/secureconnect/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/secureConnect/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/secureConnect/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/secureconnect/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/secureConnect/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/secureConnect/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/secureconnect/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/secureConnect/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/secureConnect/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/secureconnect/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/secureConnect/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/sensor"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/sensor:

      .. rst-class:: ansible-option-title

      **sensor**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/sensor" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/sensor/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/sensor/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/sensor/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/sensor/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/sensor/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/sensor/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/sensor/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/sensor/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/sensor/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/sensor/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/sensor/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/sensor/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/sensor/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/sensor/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/sensor/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switch"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switch:

      .. rst-class:: ansible-option-title

      **switch**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switch" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switch/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switch/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switch/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switch/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switch/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switch/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switch/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switch/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switch/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switch/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switch/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switch/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switch/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switch/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switch/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switchCatalyst"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switchcatalyst:

      .. rst-class:: ansible-option-title

      **switchCatalyst**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switchCatalyst" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switchCatalyst/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switchcatalyst/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switchCatalyst/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switchCatalyst/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switchcatalyst/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switchCatalyst/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switchCatalyst/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switchcatalyst/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switchCatalyst/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switchCatalyst/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switchcatalyst/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switchCatalyst/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/switchCatalyst/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/switchcatalyst/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/switchCatalyst/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless:

      .. rst-class:: ansible-option-title

      **wireless**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/nextUpgrade/predownload"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/nextupgrade/predownload:

      .. rst-class:: ansible-option-title

      **predownload**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/nextUpgrade/predownload" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Predownload settings for the firmware upgrade.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/nextUpgrade/predownload/enabled"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/nextupgrade/predownload/enabled:

      .. rst-class:: ansible-option-title

      **enabled**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/nextUpgrade/predownload/enabled" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network devices will predownload the firmware image in advance of the actual upgrade.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wireless/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wireless/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wireless/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wirelessController"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wirelesscontroller:

      .. rst-class:: ansible-option-title

      **wirelessController**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wirelessController" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The network device to be updated.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wirelessController/nextUpgrade"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wirelesscontroller/nextupgrade:

      .. rst-class:: ansible-option-title

      **nextUpgrade**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wirelessController/nextUpgrade" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The pending firmware upgrade if it exists.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wirelessController/nextUpgrade/time"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wirelesscontroller/nextupgrade/time:

      .. rst-class:: ansible-option-title

      **time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wirelessController/nextUpgrade/time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The time of the last successful upgrade.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wirelessController/nextUpgrade/toVersion"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wirelesscontroller/nextupgrade/toversion:

      .. rst-class:: ansible-option-title

      **toVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wirelessController/nextUpgrade/toVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version to be updated to.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wirelessController/nextUpgrade/toVersion/id"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wirelesscontroller/nextupgrade/toversion/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wirelessController/nextUpgrade/toVersion/id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The version ID.


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-products/wirelessController/participateInNextBetaRelease"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-products/wirelesscontroller/participateinnextbetarelease:

      .. rst-class:: ansible-option-title

      **participateInNextBetaRelease**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-products/wirelessController/participateInNextBetaRelease" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether or not the network wants beta firmware.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-timezone"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-timezone:

      .. rst-class:: ansible-option-title

      **timezone**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-timezone" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The timezone for the network.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-upgradeWindow"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-upgradewindow:

      .. rst-class:: ansible-option-title

      **upgradeWindow**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-upgradeWindow" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Upgrade window for devices in network.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-upgradeWindow/dayOfWeek"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-upgradewindow/dayofweek:

      .. rst-class:: ansible-option-title

      **dayOfWeek**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-upgradeWindow/dayOfWeek" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Day of the week.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-upgradeWindow/hourOfDay"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__parameter-upgradewindow/hourofday:

      .. rst-class:: ansible-option-title

      **hourOfDay**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-upgradeWindow/hourOfDay" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Hour of the day.


      .. raw:: html

        </div>



.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are networks.Networks.update\_network\_firmware\_upgrades,
   - Paths used are put /networks/{networkId}/firmwareUpgrades,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager
   - from Cisco Dashboard API Python(SDK)
   - The parameters starting with dnac\_ are used by the Cisco DNAC Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco Meraki documentation for networks updateNetworkFirmwareUpgrades <https://developer.cisco.com/meraki/api-v1/#!update-network-firmware-upgrades>`_
       Complete reference of the updateNetworkFirmwareUpgrades API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Update all
      cisco.meraki.networks_firmware_upgrades:
        meraki_api_key: "{{ meraki_api_key }}"
        meraki_base_url: "{{ meraki_base_url }}"
        meraki_single_request_timeout: "{{ meraki_single_request_timeout }}"
        meraki_certificate_path: "{{ meraki_certificate_path }}"
        meraki_requests_proxy: "{{ meraki_requests_proxy }}"
        meraki_wait_on_rate_limit: "{{ meraki_wait_on_rate_limit }}"
        meraki_nginx_429_retry_wait_time: "{{ meraki_nginx_429_retry_wait_time }}"
        meraki_action_batch_retry_wait_time: "{{ meraki_action_batch_retry_wait_time }}"
        meraki_retry_4xx_error: "{{ meraki_retry_4xx_error }}"
        meraki_retry_4xx_error_wait_time: "{{ meraki_retry_4xx_error_wait_time }}"
        meraki_maximum_retries: "{{ meraki_maximum_retries }}"
        meraki_output_log: "{{ meraki_output_log }}"
        meraki_log_file_prefix: "{{ meraki_log_file_prefix }}"
        meraki_log_path: "{{ meraki_log_path }}"
        meraki_print_console: "{{ meraki_print_console }}"
        meraki_suppress_logging: "{{ meraki_suppress_logging }}"
        meraki_simulate: "{{ meraki_simulate }}"
        meraki_be_geo_id: "{{ meraki_be_geo_id }}"
        meraki_caller: "{{ meraki_caller }}"
        meraki_use_iterator_for_get_pages: "{{ meraki_use_iterator_for_get_pages }}"
        meraki_inherit_logging_config: "{{ meraki_inherit_logging_config }}"
        state: present
        networkId: string
        products:
          appliance:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1001'
            participateInNextBetaRelease: false
          camera:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1003'
            participateInNextBetaRelease: false
          cellularGateway:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1004'
            participateInNextBetaRelease: false
          secureConnect:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1008'
            participateInNextBetaRelease: false
          sensor:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1005'
            participateInNextBetaRelease: false
          switch:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1002'
            participateInNextBetaRelease: false
          switchCatalyst:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1234'
            participateInNextBetaRelease: false
          wireless:
            nextUpgrade:
              predownload:
                enabled: false
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1000'
            participateInNextBetaRelease: false
          wirelessController:
            nextUpgrade:
              time: '2019-03-17T17:22:52Z'
              toVersion:
                id: '1006'
            participateInNextBetaRelease: false
        timezone: America/Los_Angeles
        upgradeWindow:
          dayOfWeek: sun
          hourOfDay: '4:00'




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-meraki_response"></div>

      .. _ansible_collections.cisco.meraki.networks_firmware_upgrades_module__return-meraki_response:

      .. rst-class:: ansible-option-title

      **meraki_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-meraki_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Meraki Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"products": {"appliance": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "camera": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "cellularGateway": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "secureConnect": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "sensor": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "switch": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "wireless": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"predownload": {"enabled": true}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}, "wirelessController": {"availableVersions": [{"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}], "currentVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "isUpgradeAvailable": true, "lastUpgrade": {"fromVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}, "time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "nextUpgrade": {"time": "string", "toVersion": {"firmware": "string", "id": "string", "releaseDate": "string", "releaseType": "string", "shortName": "string"}}, "participateInNextBetaRelease": true}}, "timezone": "string", "upgradeWindow": {"dayOfWeek": "string", "hourOfDay": "string"}}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Francisco Munoz (@fmunoz)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/meraki/dashboard-api-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/meraki/dashboard-api-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

